# sql-load-test

./: .gitignore  Cargo.toml  README.md  RESEARCH.md  foo.csv
prisma/: schema.prisma  schema.sql
prisma/migrations/20191023130149-init/: README.md  schema.prisma  steps.json
prisma/migrations/20191023133905-add_dates/: README.md  schema.prisma  steps.json
prisma/migrations/20191023171743-init/: README.md  schema.prisma  steps.json
prisma/migrations/20191028170200-add-indices/: README.md  steps.json
prisma/migrations/20191120144633-cat/: README.md  schema.prisma  steps.json
prisma/migrations/20191224171843-init/: README.md  schema.prisma  steps.json
schemas/: base.sql
src/: csv_generator.rs  main.rs  psql_importer.rs  schema.rs
src/schema/: comment.rs  friendship.rs  like.rs  post.rs  ser_date.rs  user.rs
