[package]
name = "sql-load-test"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.8"
