[package]
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"
name = "sql-load-test"
version = "0.1.0"

[dependencies]
csv = "1.1"
derive_builder = "0.8"
indicatif = "0.12"
lazy_static = "1.4"
names = "0.11"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
console = "0.9"
structopt = "0.3"
postgres = "0.17.0-alpha.1"
indoc = "0.3"
r2d2 = "0.8"
r2d2_postgres = "0.16.0-alpha.1"
anyhow = "1.0.25"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
